# serializer version: 1
# name: test_fans[longan_link_thermostat][fan.longan_link_hvac-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'low',
        'medium',
        'high',
        'auto',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.longan_link_hvac',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 57>,
    'translation_key': 'fan',
    'unique_id': '00000000000004D2-0000000000000004-MatterNodeDevice-1-MatterFan-514-0',
    'unit_of_measurement': None,
  })
# ---
# name: test_fans[longan_link_thermostat][fan.longan_link_hvac-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Longan link HVAC',
      <FanEntityStateAttribute.PERCENTAGE: 'percentage'>: 0,
      <FanEntityStateAttribute.PERCENTAGE_STEP: 'percentage_step'>: 1.0,
      <FanEntityStateAttribute.PRESET_MODE: 'preset_mode'>: None,
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'low',
        'medium',
        'high',
        'auto',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <FanEntityFeature: 57>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.longan_link_hvac',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_fans[mock_air_purifier][fan.mock_air_purifier-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'low',
        'medium',
        'high',
        'auto',
        'natural_wind',
        'sleep_wind',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.mock_air_purifier',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 63>,
    'translation_key': 'fan',
    'unique_id': '00000000000004D2-000000000000008F-MatterNodeDevice-1-MatterFan-514-0',
    'unit_of_measurement': None,
  })
# ---
# name: test_fans[mock_air_purifier][fan.mock_air_purifier-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <FanEntityStateAttribute.DIRECTION: 'direction'>: 'forward',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mock Air Purifier',
      <FanEntityStateAttribute.OSCILLATING: 'oscillating'>: False,
      <FanEntityStateAttribute.PERCENTAGE: 'percentage'>: None,
      <FanEntityStateAttribute.PERCENTAGE_STEP: 'percentage_step'>: 10.0,
      <FanEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'auto',
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'low',
        'medium',
        'high',
        'auto',
        'natural_wind',
        'sleep_wind',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <FanEntityFeature: 63>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.mock_air_purifier',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_fans[mock_extractor_hood][fan.mock_extractor_hood-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'low',
        'medium',
        'high',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.mock_extractor_hood',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 57>,
    'translation_key': 'fan',
    'unique_id': '00000000000004D2-0000000000000049-MatterNodeDevice-1-MatterFan-514-0',
    'unit_of_measurement': None,
  })
# ---
# name: test_fans[mock_extractor_hood][fan.mock_extractor_hood-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mock Extractor hood',
      <FanEntityStateAttribute.PERCENTAGE: 'percentage'>: 0,
      <FanEntityStateAttribute.PERCENTAGE_STEP: 'percentage_step'>: 1.0,
      <FanEntityStateAttribute.PRESET_MODE: 'preset_mode'>: None,
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'low',
        'medium',
        'high',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <FanEntityFeature: 57>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.mock_extractor_hood',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_fans[mock_fan][fan.mocked_fan_switch-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'low',
        'medium',
        'high',
        'auto',
        'natural_wind',
        'sleep_wind',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.mocked_fan_switch',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 57>,
    'translation_key': 'fan',
    'unique_id': '00000000000004D2-0000000000000037-MatterNodeDevice-1-MatterFan-514-0',
    'unit_of_measurement': None,
  })
# ---
# name: test_fans[mock_fan][fan.mocked_fan_switch-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mocked Fan Switch',
      <FanEntityStateAttribute.PERCENTAGE: 'percentage'>: 0,
      <FanEntityStateAttribute.PERCENTAGE_STEP: 'percentage_step'>: 33.333333333333336,
      <FanEntityStateAttribute.PRESET_MODE: 'preset_mode'>: None,
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'low',
        'medium',
        'high',
        'auto',
        'natural_wind',
        'sleep_wind',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <FanEntityFeature: 57>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.mocked_fan_switch',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_fans[mock_room_airconditioner][fan.room_airconditioner-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'low',
        'medium',
        'high',
        'auto',
        'sleep_wind',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.room_airconditioner',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 57>,
    'translation_key': 'fan',
    'unique_id': '00000000000004D2-000000000000003B-MatterNodeDevice-1-MatterFan-514-0',
    'unit_of_measurement': None,
  })
# ---
# name: test_fans[mock_room_airconditioner][fan.room_airconditioner-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Room AirConditioner',
      <FanEntityStateAttribute.PERCENTAGE: 'percentage'>: 0,
      <FanEntityStateAttribute.PERCENTAGE_STEP: 'percentage_step'>: 33.333333333333336,
      <FanEntityStateAttribute.PRESET_MODE: 'preset_mode'>: None,
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'low',
        'medium',
        'high',
        'auto',
        'sleep_wind',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <FanEntityFeature: 57>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.room_airconditioner',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_fans[silabs_fan][fan.sl_fan-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'low',
        'medium',
        'high',
        'auto',
        'natural_wind',
        'sleep_wind',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.sl_fan',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 63>,
    'translation_key': 'fan',
    'unique_id': '00000000000004D2-0000000000000063-MatterNodeDevice-1-MatterFan-514-0',
    'unit_of_measurement': None,
  })
# ---
# name: test_fans[silabs_fan][fan.sl_fan-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <FanEntityStateAttribute.DIRECTION: 'direction'>: 'forward',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'SL_Fan',
      <FanEntityStateAttribute.OSCILLATING: 'oscillating'>: False,
      <FanEntityStateAttribute.PERCENTAGE: 'percentage'>: 30,
      <FanEntityStateAttribute.PERCENTAGE_STEP: 'percentage_step'>: 10.0,
      <FanEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'low',
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'low',
        'medium',
        'high',
        'auto',
        'natural_wind',
        'sleep_wind',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <FanEntityFeature: 63>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.sl_fan',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_fans[silabs_range_hood][fan.sl_rangehood-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'low',
        'medium',
        'high',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.sl_rangehood',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 57>,
    'translation_key': 'fan',
    'unique_id': '00000000000004D2-0000000000000072-MatterNodeDevice-1-MatterFan-514-0',
    'unit_of_measurement': None,
  })
# ---
# name: test_fans[silabs_range_hood][fan.sl_rangehood-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'SL-RangeHood',
      <FanEntityStateAttribute.PERCENTAGE: 'percentage'>: 0,
      <FanEntityStateAttribute.PERCENTAGE_STEP: 'percentage_step'>: 1.0,
      <FanEntityStateAttribute.PRESET_MODE: 'preset_mode'>: None,
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'low',
        'medium',
        'high',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <FanEntityFeature: 57>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.sl_rangehood',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
